Fix dark mode link color and Stanford footer font

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,8 @@
  ******************************************************************************/
 
 
-@import url('link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -1494,7 +1495,8 @@ body > header {
 }
 
 html[data-theme="dark"] .su-link,
-html[data-theme="dark"] .post article p a {
+html[data-theme="dark"] .post article p a,
+html[data-theme="dark"] .post article h4 a {
   color: #67AFD2;
 
   &:hover,
@@ -1537,6 +1539,7 @@ html[data-theme="dark"] .post article p a {
   padding-top: 2em;
   padding-bottom: 2em;
   background-color: #8c1515;
+  font-family: 'Source Sans 3', sans-serif;
   color: #ffffff; }
   @media only screen and (min-width: 768px) {
     .su-global-footer {
